trying to fix blurry text

--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,9 @@ ul {
     background-color: #bbb;
     border-radius: 2px;
     box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.15);
+    backface-visibility: hidden;
+    transform: translateZ(0);
+    webkit-font-smoothing: subpixel-antialiased;
     overflow: hidden;
 
     -webkit-transition: all 0.35s ease;
